--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 22, 2021 04:21:06 PM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 23, 2021 04:16:07 PM</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Request example for Udemy</p>
             <p class="text-sm">
-              <span>4:21:07 PM</span> / <span>00:00:03:241</span>
+              <span>4:16:08 PM</span> / <span>00:00:03:397</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Request example for Udemy</h5>
-<span class='badge badge-success'>12.22.2021 4:21:07 PM</span>
-<span class='badge badge-danger'>12.22.2021 4:21:11 PM</span>
-<span class='badge badge-default'>00:00:03:241</span>
+<span class='badge badge-success'>12.23.2021 4:16:08 PM</span>
+<span class='badge badge-danger'>12.23.2021 4:16:12 PM</span>
+<span class='badge badge-default'>00:00:03:397</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -115,18 +115,18 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>GET test to endpoint</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Validate the number of entries in the response</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="Steps.APISteps.sendGETRequest()">
-                <span>Given I send a GET request to the endpoint</span>
+              <div class="step pass-bg" title="Steps.APISteps.sendGETRequest(java.lang.String)">
+                <span>Given I send a GET request to the https://jsonplaceholder.typicode.com URI</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="Steps.APISteps.expectedStatusCode(int)">
-                <span>Then I get a 200 status code</span>
+              <div class="step pass-bg" title="Steps.APISteps.validateSize(int,java.lang.String)">
+                <span>Then I validate there are 10 items on the /users endpoint</span>
       <div>
       </div>
               </div>
@@ -177,11 +177,11 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:21:07 PM</td>
+<td>16:16:08 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>GET test to endpoint</a>
+<a href="#" class="linked" test-id='1' id='2'>Validate the number of entries in the response</a>
 <div class="">
-<span class="badge badge-default">Request example for Udemy.GET test to endpoint</span>
+<span class="badge badge-default">Request example for Udemy.Validate the number of entries in the response</span>
 </div>
 </td>
 </tr>
@@ -202,13 +202,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 22, 2021 04:21:06 PM</h3>
+<h3>Dec 23, 2021 04:16:07 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 22, 2021 04:21:11 PM</h3>
+<h3>Dec 23, 2021 04:16:12 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -298,7 +298,7 @@
 </div></div>
 <script>
 var timeline = {
-"Request example for Udemy":3.241
+"Request example for Udemy":3.397
 };
 </script>
 <div class="row">
